# c6502

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/c6502/: c6502.h
scripts/: clang-format.sh
src/: c6502.cpp  c6502AddrModes.cpp
test/: c6502_test.cpp  test_c6502.cpp  test_c6502.h  test_insLoad.cpp
